--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gyr"
-version = "0.2.1"
+version = "0.2.5"
 authors = ["Namkhai B. <me@forkbomb9.ch>"]
 edition = "2021"
 
@@ -25,11 +25,11 @@ directories = "5.0"
 dirs = "5.0"
 fuzzy-matcher = "0.3"
 libc = "0.2"
-safe-regex = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 shell-words = "1.0"
 sled = "0.34"
-termion = "2.0"
+crossterm = "0.27"
+scopeguard = "1.1"
 toml = "0.7"
-ratatui = { version = "0.22.0", default-features = false, features = ["termion"]}
+ratatui = { version = "0.22.0", default-features = false, features = ["crossterm"]}
 walkdir = "2.3"
