pre-0.3.0-eggrind, added -dmenua3

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,4 @@ ratatui = { version = "0.22.0", default-features = false, features = ["crossterm
 walkdir = "2.3"
 which = "4.4"
 is-terminal = "0.4"
+strip-ansi-escapes = "0.2"
