--- a/color_examples.toml
+++ b/color_examples.toml
@@ -1,5 +1,5 @@
-# Gyr Color Examples - All Supported Color Formats
-# Copy any of these to your ~/.config/gyr/config.toml
+# Fsel Color Examples - All Supported Color Formats
+# Copy any of these to your ~/.config/fsel/config.toml
 
 # === NAMED COLORS ===
 # Basic colors
