--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "gyr"
-version = "0.3.0-eggrind"
+name = "fsel"
+version = "1.0.0-riceknife"
 authors = ["Namkhai B. <me@forkbomb9.ch>"]
 edition = "2021"
 
 description = "Fast TUI app launcher and fuzzy finder for GNU/Linux and *BSD"
 
-homepage = "https://github.com/Mjoyufull/gyr"
-repository = "https://github.com/Mjoyufull/gyr"
+homepage = "https://github.com/Mjoyufull/fsel"
+repository = "https://github.com/Mjoyufull/fsel"
 readme = "README.md"
 keywords = ["tui", "tools"]
 categories = ["os"]
@@ -37,4 +37,4 @@ which = "4.4"
 is-terminal = "0.4"
 strip-ansi-escapes = "0.2"
 base64 = "0.22"
-tokio = { version = "1.0", features = ["process", "rt", "rt-multi-thread"] }
+tokio = { version = "1.0", features = ["process", "rt", "rt-multi-thread", "io-util"] }
