--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fsel"
-version = "1.0.1-riceknife"
+version = "1.1.0-riceknife"
 authors = ["Namkhai B. <me@forkbomb9.ch>"]
 edition = "2021"
 rust-version = "1.70"
@@ -15,11 +15,14 @@ categories = ["os"]
 license = "BSD-2-Clause"
 
 [profile.release]
-lto = true
+lto = "fat"
 strip = true
+codegen-units = 1
+opt-level = 3
+panic = "abort"
 
 [dependencies]
-bincode = "1.3"
+bincode = { version = "1.3", default-features = false }
 eyre = "0.6"
 lexopt = "0.3"
 directories = "5.0"
@@ -28,7 +31,7 @@ fuzzy-matcher = "0.3"
 libc = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 shell-words = "1.0"
-sled = "0.34"
+sled = { version = "0.34", default-features = false }
 crossterm = "0.27"
 scopeguard = "1.1"
 toml = "0.7"
@@ -38,4 +41,4 @@ which = "4.4"
 is-terminal = "0.4"
 strip-ansi-escapes = "0.2"
 base64 = "0.22"
-tokio = { version = "1.0", features = ["process", "rt", "rt-multi-thread", "io-util"] }
+tokio = { version = "1.0", features = ["process", "rt-multi-thread", "io-util"], default-features = false }
