feat: add tag system and major codebase refactor
- Refactored codebase into modular structure (common/, core/, desktop/, modes/, ui/)
- Added tag color name display feature (--cclip-show-tag-color-names)
- Added tag management CLI flags (--tag clear, --tag list)
- Fixed tag color name display in clipboard history UI
- Improved Sixel image clearing to prevent text corruption
- Implemented selection/scroll reset on filter change (contributed by @walldmtd)
- Updated all documentation for new features

BREAKING CHANGE: None (backward compatible)
Closes #[issue-number-if-applicable]

--- a/config.toml
+++ b/config.toml
@@ -168,3 +168,6 @@ wrap_long_lines = true           # Wrap long lines
 image_preview = true             # Show inline image previews
 hide_inline_image_message = false # Hide "[Inline Image Preview]" text
 
+# Tags (requires cclip with tag support)
+# show_tag_color_names = false   # Show tag color names in display
+
