feat(process,cclip,ui): clean fullscreen; stable Kitty/Foot clears; config error UX; add kill helper; v2.3.0-seedclay
- Process/locking
  - Add kill_process_sigterm_result(pid) -> io::Result<()>, keep wrapper (Option A)
  - Remove cclip lock only on Ok or ESRCH; preserve on EPERM/others

- Rendering/graphics
  - Clean fullscreen (Alt+I): fully cleared background, cursor to (0,0)
    - Kitty: centered display
    - Foot/Sixel: true fullscreen
  - Tag mode: clear image on entry; suspend inline preview during tag modes; resume on exit
  - Foot/Sixel stability: pre-draw terminal.clear() on image state changes, then Clear all panels in-draw to re-sync ratatui buffer (fixes missing glyphs)

- Pipeline hygiene
  - Compute layout/wrapping inside terminal.draw()
  - Remove post-draw clearing; use in-draw Clear

- Config UX
  - Enhanced duplicate key/table error with actionable guidance (root vs [dmenu] vs [cclip])

- Misc
  - Collapse consecutive str::replace per clippy
  - Bump version to 2.3.0-seedclay (MINOR, backward compatible)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fsel"
-version = "2.2.3-seedclay"
+version = "2.3.0-seedclay"
 authors = ["Mjoyufull <https://github.com/Mjoyufull>"]
 edition = "2021"
 rust-version = "1.89"
@@ -42,3 +42,5 @@ is-terminal = "0.4"
 strip-ansi-escapes = "0.2"
 base64 = "0.22"
 tokio = { version = "1.0", features = ["process", "rt-multi-thread", "io-util"], default-features = false }
+unicode-width = "0.2.0"
+regex = "1.11"
