--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fsel"
-version = "2.3.0-seedclay"
+version = "2.4.0-seedclay"
 authors = ["Mjoyufull <https://github.com/Mjoyufull>"]
 edition = "2021"
 rust-version = "1.89"
@@ -32,15 +32,19 @@ libc = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 shell-words = "1.1"
 redb = "3.1"
-crossterm = "0.29"
+crossterm = { version = "0.29", features = ["event-stream"] }
 scopeguard = "1.2"
 toml = "0.9"
 ratatui = { version = "0.29", default-features = false, features = ["crossterm"]}
-walkdir = "2.5"
 which = "8.0"
 is-terminal = "0.4"
 strip-ansi-escapes = "0.2"
 base64 = "0.22"
-tokio = { version = "1.0", features = ["process", "rt-multi-thread", "io-util"], default-features = false }
+tokio = { version = "1.0", features = ["full"] }
+futures = "0.3"
 unicode-width = "0.2.0"
 regex = "1.11"
+jwalk = "0.8.1"
+rayon = "1.11.0"
+config = "0.15.19"
+walkdir = "2.5.0"
