--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,8 @@ panic = "abort"
 bincode = { version = "1.3", default-features = false }
 eyre = "0.6"
 lexopt = "0.3"
-directories = "5.0"
-dirs = "5.0"
+directories = "6.0"
+dirs = "6.0"
 nucleo-matcher = "0.3.1"
 libc = "0.2"
 serde = { version = "1.0", features = ["derive"] }
@@ -35,14 +35,14 @@ redb = "3.1"
 crossterm = { version = "0.29", features = ["event-stream"] }
 scopeguard = "1.2"
 toml = "0.9"
-ratatui = { version = "0.29", default-features = false, features = ["crossterm"]}
+ratatui = { version = "0.30", default-features = false, features = ["crossterm", "layout-cache"]}
 which = "8.0"
 is-terminal = "0.4"
 strip-ansi-escapes = "0.2"
 base64 = "0.22"
-tokio = { version = "1.0", features = ["full"] }
+tokio = { version = "1.49", features = ["full"] }
 futures = "0.3"
-unicode-width = "0.2.0"
+unicode-width = "0.2.2"
 regex = "1.11"
 jwalk = "0.8.1"
 rayon = "1.11.0"
