--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,11 +22,11 @@ opt-level = 3
 panic = "abort"
 
 [dependencies]
-bincode = { version = "1.3", default-features = false }
+postcard = { version = "1.1", default-features = false, features = ["alloc"] }
 eyre = "0.6"
 lexopt = "0.3"
 directories = "6.0"
-dirs = "6.0"
+time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
 nucleo-matcher = "0.3.1"
 libc = "0.2"
 serde = { version = "1.0", features = ["derive"] }
@@ -40,12 +40,12 @@ which = "8.0"
 is-terminal = "0.4"
 strip-ansi-escapes = "0.2"
 base64 = "0.22"
-tokio = { version = "1.49", features = ["full"] }
+tokio = { version = "1.49", features = ["rt-multi-thread", "process", "sync", "time", "macros", "io-util"] }
 futures = "0.3"
 unicode-width = "0.2.2"
-regex = "1.11"
+
 jwalk = "0.8.1"
 rayon = "1.11.0"
-config = "0.15.19"
-walkdir = "2.5.0"
-chrono = "0.4.42"
+
+
+
