--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ redb = "3.1"
 crossterm = { version = "0.29", features = ["event-stream"] }
 scopeguard = "1.2"
 toml = "0.9"
-ratatui = { version = "0.30", default-features = false, features = ["crossterm", "layout-cache"]}
+ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29", "layout-cache"]}
 which = "8.0"
 is-terminal = "0.4"
 strip-ansi-escapes = "0.2"
@@ -46,6 +46,3 @@ unicode-width = "0.2.2"
 
 jwalk = "0.8.1"
 rayon = "1.11.0"
-
-
-
