--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,11 +22,11 @@ opt-level = 3
 panic = "abort"
 
 [dependencies]
-bincode = { version = "1.3", default-features = false }
+postcard = { version = "1.1", default-features = false, features = ["alloc"] }
 eyre = "0.6"
 lexopt = "0.3"
-directories = "5.0"
-dirs = "5.0"
+directories = "6.0"
+time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
 nucleo-matcher = "0.3.1"
 libc = "0.2"
 serde = { version = "1.0", features = ["derive"] }
@@ -35,17 +35,14 @@ redb = "3.1"
 crossterm = { version = "0.29", features = ["event-stream"] }
 scopeguard = "1.2"
 toml = "0.9"
-ratatui = { version = "0.29", default-features = false, features = ["crossterm"]}
+ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29", "layout-cache"]}
 which = "8.0"
 is-terminal = "0.4"
 strip-ansi-escapes = "0.2"
 base64 = "0.22"
-tokio = { version = "1.0", features = ["full"] }
+tokio = { version = "1.49", features = ["rt-multi-thread", "process", "sync", "time", "macros", "io-util"] }
 futures = "0.3"
-unicode-width = "0.2.0"
-regex = "1.11"
+unicode-width = "0.2.2"
+
 jwalk = "0.8.1"
 rayon = "1.11.0"
-config = "0.15.19"
-walkdir = "2.5.0"
-chrono = "0.4.42"
