feat(cclip): integrate ratatui-image for native TUI image previews
Replace manual chafa subprocess logic with ratatui-image's automatic
protocol detection and widget-based rendering for clipboard image
previews (inline and fullscreen via Alt+i).

Changes:
- Add ratatui-image 10.0 and image 0.25 dependencies
- Introduce ImageManager in ui/graphics.rs for centralized image
  loading and rendering via StatefulImage widget
- Refactor cclip inline preview to render images within ratatui draw loop
- Implement fullscreen image preview as native ratatui modal (Alt+i)
- Remove all chafa subprocess logic and check_chafa_available()
- Remove base64 crate (was only used for manual Kitty encoding)
- Remove duplicate get_cclip_rowid definition in dmenu_ui.rs
- Replace legacy image_hide() with ImageManager::clear()
-Fix ratatui 0.30 constraints API (.as_ref() removal)
- Streamline clipboard copy to use cclip copy <rowid> directly
- Drop image-defaults feature to avoid pulling rav1e/ravif bloat
ngl i also think this is kinda useless but im lowkey too tired for all this bs fr

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,8 +39,9 @@ ratatui = { version = "0.30", default-features = false, features = ["crossterm_0
 which = "8.0"
 is-terminal = "0.4"
 strip-ansi-escapes = "0.2"
-base64 = "0.22"
 tokio = { version = "1.49", features = ["rt-multi-thread", "process", "sync", "time", "macros", "io-util"] }
+ratatui-image = { version = "10.0", default-features = false, features = ["crossterm", "tokio"] }
+image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
 futures = "0.3"
 unicode-width = "0.2.2"
 
