docs: bump to 3.1.0, drop chafa requirement, fix manpage
- Bump version to 3.1.0-kiwicrab in Cargo.toml, flake.nix, README,
  USAGE, CONTRIBUTING, and fsel.1
- Remove chafa from requirements; note pre-3.1.0 used chafa, 3.1.0+
  uses built-in ratatui-image (README, USAGE, CONTRIBUTING, config.toml)
- Document native inline/fullscreen image preview (ratatui-image) in
  README, manpage, and CONTRIBUTING release example
- fsel.1: fix app launcher lock path (~/.local/share/fsel/fsel-fsel.lock),
  add hide_inline_image_message to [cclip] example, clarify --cclip/Alt-i
- CONTRIBUTING: align release branch/tag examples with PROJECT_STANDARDS

--- a/config.toml
+++ b/config.toml
@@ -171,7 +171,7 @@ exit_if_empty = false            # Exit if stdin is empty
 show_line_numbers = true         # Show cclip rowid
 wrap_long_lines = true           # Wrap long lines
 
-# Images (requires chafa + Kitty/Sixel terminal)
+# Images (Kitty/Sixel/Halfblocks-capable terminal; built-in ratatui-image, no chafa)
 image_preview = true             # Show inline image previews
 hide_inline_image_message = false # Hide "[Inline Image Preview]" text
 
