--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
         with:
+          toolchain: 1.90
           components: rustfmt
       - name: Check formatting
         run: cargo fmt --all -- --check
@@ -28,6 +29,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
         with:
+          toolchain: 1.90
           components: clippy
       - name: Run clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
@@ -38,6 +40,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: 1.90
       - name: Run tests
         run: cargo test --verbose --all-features
 
@@ -47,6 +51,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: 1.90
       - name: Build release
         run: cargo build --release --verbose
       - name: Upload artifact
